--- a/caen/package.json
+++ b/caen/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "gsap": "^3.13.0",
+    "matter-js": "^0.20.0"
   }
 }
